--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Branch
         uses: actions/checkout@v2
 
-      - name: Setup Node.js environment
+      - name: Setup Node.js eniironment
         uses: actions/setup-node@v2.1.2
         with:
           node-version: ${{ matrix.node-version }}
